--- a/package.json
+++ b/package.json
@@ -15,5 +15,16 @@
     "verify": "./scripts/verify.sh",
     "lint": "cargo clippy --all-targets -- -D warnings",
     "format": "cargo fmt --all"
+  },
+  "devDependencies": {
+    "@coral-xyz/anchor": "^0.32.1",
+    "@solana/web3.js": "^1.98.4",
+    "@types/bn.js": "^5.2.0",
+    "@types/chai": "^5.2.3",
+    "@types/mocha": "^10.0.10",
+    "chai": "^6.2.2",
+    "mocha": "^11.7.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
